# LocalTether

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  policy
include/: imgui_include.h
include/core/: SDLApp.h
include/input/: InputManager.h  LinuxInput.h  LinuxInputHelper.h  WindowsInput.h
include/network/: Client.h  Message.h  Server.h  Session.h
include/ui/: DockspaceManager.h  FlowPanels.h  Icons.h  StyleManager.h  UIState.h
include/ui/panels/: ConsolePanel.h  ControlsPanel.h  FileExplorerPanel.h  NetworkSettingsPanel.h  PauseSettingsPanel.h  PropertiesPanel.h
include/utils/: Config.h  KeycodeConverter.h  Logger.h  ScanNetwork.h  Serialization.h  SslCertificateGenerator.h
scripts/: build.ps1  build.sh  imgui.ini  localtether_config.cfg  logfile.txt  run.ps1  run.sh  runBuildAsAdmin.ps1  scanLan.ps1  scanLan.sh  sync.sh
src/: main.cpp
src/core/: SDLApp.cpp
src/input/: InputManager.cpp  LinuxInput.cpp  LinuxInputHelper.cpp  WindowsInput.cpp
src/network/: Client.cpp  Message.cpp  Server.cpp  Session.cpp
src/ui/: DockspaceManager.cpp  FlowPanels.cpp  StyleManager.cpp  UIState.cpp
src/ui/panels/: ConsolePanel.cpp  ControlsPanel.cpp  FileExplorerPanel.cpp  NetworkSettingsPanel.cpp  PauseSettingsPanel.cpp  PropertiesPanel.cpp
src/utils/: Config.cpp  KeycodeConverter.cpp  Logger.cpp  ScanNetwork.cpp  Serialization.cpp  SslCertificateGenerator.cpp
src/utlis/: Logger.cpp
